# PowerPlayer

./: BUILD.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: manual.yml  release-windows.yml  release.yml
docs/: OBJECTIVE.md  ROADMAP.md  STATE.md
docs/images/: ui_snapshots.md
docs/images/references/: References.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: ICON_GUIDE.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: analyzer.rs  decoder.rs  engine.rs  lyrics.rs  lyrics_downloader.rs  mod.rs
src-tauri/src/audio/dsp/: autoeq.rs  fft.rs  filters.rs  mod.rs  reverb.rs  spatial.rs  tone.rs
src-tauri/src/db/: manager.rs  mod.rs  search.rs  spatial_store.rs
src/components/: AlphabetIndex.tsx  DynamicPill.tsx  EqualizerView.tsx  FluidBackground.tsx  FullPlayerView.tsx  GlassDropdown.tsx  GlassSwitch.tsx  LibraryView.tsx  LyricsEngine.tsx  LyricsView.tsx  PlaybackControls.tsx  ProgressBar.tsx  SearchView.tsx  SettingsView.tsx  SpatialRoom.tsx  SplashScreen.tsx  TrackBubble.tsx  VisualEQ.tsx  WelcomeView.tsx
src/hooks/: useAudioIPC.ts  useTrackState.ts
src/styles/: index.css
