[package]
name = "powerplayer"
version = "0.1.0"
description = "Hi-Res Audio Player for Windows"
authors = ["PowerPlayer Team"]
edition = "2021"

[lib]
name = "powerplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.5", features = ["flac"] }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.16.0"
log = "0.4.29"
ringbuf = "0.4.8"
