[package]
name = "powerplayer"
version = "0.1.0"
description = "Hi-Res Audio Player for Windows"
authors = ["PowerPlayer Team"]
edition = "2021"

[lib]
name = "powerplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.5", features = ["flac"] }
rustfft = "6.4.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rayon = "1.11.0"
walkdir = "2.5.0"
id3 = "1.16.4"
notify = "6.1.1"
sha2 = "0.10.9"
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.16.0"
log = "0.4.29"
ringbuf = "0.4.8"
